@@ -1,29 +1,42 @@
-# Tài liệu tham khảo ngôn ngữ lập trình Java 25
+# Tài liệu tham khảo ngôn ngữ lập trình Java
 
-Bộ tài liệu này được thiết kế như một dạng tài liệu tham khảo, giúp các bạn nắm được tất cả những khái niệm và thành phần của Java (mục tiêu **JDK 25 LTS**). Vì ở dạng tham khảo nên sẽ có một số khó khăn và không phù hợp với người học từ đầu, nếu chưa biết gì về Java, bạn nên tìm một giáo trình đơn giản hơn (xem bên dưới) và dùng tài liệu này để tham khảo kỹ hơn trong quá trình học.
+Bộ tài liệu tham chiếu **in-depth / advanced** cho ngôn ngữ Java, nhắm **JDK 25 LTS**. Không phải giáo trình nhập môn: các khái niệm được trình bày dạng tham khảo nhanh kèm chi tiết nâng cao (semantics, JEP/version gates, pitfalls). Nếu chưa biết Java, bắt đầu bằng The Java Tutorials bên dưới, rồi dùng bộ này khi cần tra cứu sâu hơn.
 
----
-
-Tham khảo nếu bạn chưa biết về Java: [The Java Tutorials](https://docs.oracle.com/javase/tutorial/) · [OpenJDK 25](https://openjdk.org/projects/jdk/25/)
+Language level / preview features phụ thuộc toolchain và `--enable-preview` (hoặc `--source`/`--release` của `javac`). Nội dung các file ghi rõ khi tính năng là final, preview, hoặc runtime-only (JVM flags).
 
 ---
 
-## Nội dung  
+Tham khảo chính thức: [The Java Tutorials](https://docs.oracle.com/javase/tutorial/) · [Java Language Specification](https://docs.oracle.com/javase/specs/) · [JDK 25 JEPs](https://openjdk.org/projects/jdk/25/) · [API docs](https://docs.oracle.com/en/java/javase/25/docs/api/) · [OpenJDK 25](https://openjdk.org/projects/jdk/25/)
+
+---
+
+## Nội dung
+
+### Ngôn ngữ cốt lõi
 
 - [Hàm main](main-function.md)
 - [Package & Module](packages-modules.md)
 - [Hệ thống kiểu dữ liệu](typesystem.md)
-- [Annotation](annotations.md)
 - [Literal](literals.md)
 - [Toán tử](operators.md)
 - [Từ khóa](keywords.md)
 - [Phát biểu](statements.md)
 - [Phương thức](methods.md)
+- [Annotation](annotations.md)
+
+### OOP & Functional
+
+- [Lập trình hướng đối tượng](oop.md)
 - [Lambda & Functional interface](lambdas-functional.md)
 - [Exception](exceptions.md)
-- [Lập trình hướng đối tượng trong Java](oop.md)
 - [Tập hợp & Generics](collections-generics.md)
 - [Stream API](streams.md)
+
+### Đồng bộ & bất đồng bộ
+
 - [Thread & Virtual thread](threading.md)
 - [Lập trình bất đồng bộ](async.md)
+
+### Phiên bản
+
 - [Java 25 — điểm nổi bật](java25.md)
